# Plasma

./: CMakeLists.txt  vcpkg.json
Sources/Plasma/Apps/plClient/: CMakeLists.txt  plClient.cpp
Sources/Plasma/Apps/plClient/win32/: winmain.cpp
Sources/Plasma/FeatureLib/: CMakeLists.txt
Sources/Plasma/FeatureLib/pfVKPipeline/: CMakeLists.txt  pfVKPipelineCreatable.h  plVKDevice.cpp  plVKDevice.h  plVKDeviceRef.h  plVKDeviceRefs.cpp  plVKEnumerate.cpp  plVKPipeline.cpp  plVKPipeline.h  plVKPlateManager.cpp  plVKPlateManager.h
Sources/Plasma/NucleusLib/inc/: plCreatableIndex.h
Sources/Plasma/PubUtilLib/plPipeline/: hsG3DDeviceSelector.cpp  hsG3DDeviceSelector.h
